syntax = "proto3";
package raft4si;

import "gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message PBPeer {
  uint64 node_id = 1;
  string peer_location = 2;
}

message PBMembers {
  uint64 member_id_seq = 1;
  repeated PBPeer peers = 2;
}

// wal saved snapshot struct
message PBSnapshot {
  bytes snapdata = 1;
  bytes hard_state = 2;
  PBMembers members = 3;
}

// Raft propose struct 
message PBPropose {
  uint64 propose_id = 2;
  bytes request = 1;
}

// wal saved Entry struct
message PBEntry {
	bytes entry = 1;
	bytes hard_state = 2;
}

// send to service Message struct
message PBLeadershipUpdateMessage {
	bool local_leader = 1;
}

// Request/Response
